# wasi-vfs

./: Cargo.toml  Makefile
.cargo/: config.toml
crates/wasi-vfs-cli/: Cargo.toml
crates/wasi-vfs-cli/src/: lib.rs
sometest/: Makefile  haiku.txt  main.c
src/: init.c  lib.rs  trampoline_generated.rs  wasi_snapshot_preview1.rs
src/embed/: linked_storage.c  linked_storage.rs  mod.rs
