[package]
name = "wasi-vfs-cli"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "wasi-vfs"

[dependencies]
anyhow = "1.0.40"
structopt = "0.3.21"
wizer = { git = "https://github.com/bytecodealliance/wizer.git", rev = "refs/pull/89/head" }
tempdir = "0.3.7"
uuid = { version = "1.3.0", features = ["v4"] }
zip_archive = "1.2.2"
walkdir = "2.3.3"
xz2 = { git = "https://github.com/ereslibre/xz2-rs.git", branch = "wasm32-wasi", features = ["static"] }
